--- a/CV-PhD/main.tex
+++ b/CV-PhD/main.tex
@@ -92,46 +92,58 @@
 %== HEADER ==%
 \begin{center}      
     {\fontsize{28}{28}\selectfont Orange(Yingzhi) Ao} \\ \vspace{5pt}
-    {\org\faEnvelope[regular]}\ \href{mailto:ya2538@columbia.edu}{ya2538@email.com} \hfill
+    {\org\faEnvelope[regular]}\ \href{mailto:ya2538@columbia.edu}{ya2538@columbia.com} \hfill
     {\org\faIcon{mobile-alt}}\ \href{tel:+1 9175184578}{+1 917-518-4578} \hfill
-    {\org\faGithub} \href{https://github.com/OrangeAoo}{My GitHub Page}  \hfill
-    {\org\faLinkedin} \href{linkedin.com/in/orange-ao}{My LinkedIn Page}
+    {\org\faGithub} \href{https://github.com/OrangeAoo}{Visit My GitHub}  \hfill
+    {\org\faLinkedin} \href{http://linkedin.com/in/orange-ao}{Visit My LinkedIn}
 \end{center}
 
 \section{About me}  %========================== About me ==========================%
 
-\textit{Cultivated by the past related experiences, my keen interest in FBSDEs and stochastic control optimization has led me to pursue a PhD, where I aim to develop innovative methodologies to enhance risk management strategies in dynamic financial environments.}
+\textit{Cultivated by past related experiences, my keen interest in FBSDEs and stochastic control optimization has led me to pursue a PhD, where I aim to develop innovative methodologies to enhance risk management strategies in dynamic financial environments.}
 
 {\org \itshape References available upon request.}
 
 \section{Education}  %========================== Edu ==========================%
 
 \subsection{Columbia University  \normalfont \hfill Visiting Student \hfill 2024}
-\textbf{GPA}: 4.17 (Straight-A)\\
-\textbf{Related Courses}
 \begin{itemize}
-    \item[\checkmark] Programming:\\
-    \hypertarget{PM}{Predictive Modeling with R}(A), DS in Finance And Insurance(A+), Statistic ML(A), 
-    \item[\checkmark] Math:\\
-    Applied Stochastic Processes(A+)
-    \item[\checkmark] Integrated Project:\\
-    Insurance Pricing with ML(A+)
-\end{itemize} 
-\subsection{Nanjing University \normalfont \hfill Bachelor of Economics (Financial Engineering)  \hfill 2021-2025}
-
-\textbf{GPA:} 92\\
-\textbf{Related Courses}
-\begin{itemize}
-    \item[\checkmark] Programming \& ML: \\
-    \quad Python, Numerical Analysis and Application Software(MATLAB), *Financial Engineering, Applied Statistics II: Time Series (with Python), *\hypertarget{FinTS}{Financial Time Series} (with R), *AI
-    \item[\checkmark] Math \& Stats: \\
-    \quad Probability Theory and Mathematical Statistics, Calculus I \& II, Discrete Mathematics, Linear Algebra, ODE, *PDE, *Mathematics Finance
-    \item[\checkmark] Finance:\\
-    \quad Econometrics, Financial Risk Management, Securities Investment, *Options Investing Theories And Practices, Corporate Finance, Microeconomics, Macroeconomics, Accounting, International Finance, International Trade
+    \item \textbf{GPA}: 4.17 (Straight-A)
+    \item \textbf{Related Courses}
+    \begin{itemize}
+        \item\begin{description}
+            \item[Programming] \hypertarget{PM}{**Predictive Modeling (with R)}(A), **DS in Finance And Insurance (with Python) (A+), Statistical ML (with Python) (A)
+        \end{description}
+        \item\begin{description}
+            \item[Math] **Applied Stochastic Processes(A+)
+        \end{description}
+        \item\begin{description}
+            \item[Integrated Project] Insurance Pricing with ML(A+)
+        \end{description} 
+    \end{itemize} 
 \end{itemize}
+
+\subsection{Nanjing University \normalfont \hfill Bachelor of Economics (Financial Engineering)  \hfill 2021-2025}
+\begin{itemize}
+    \item \textbf{GPA}: 92
+    \item \textbf{Related Courses}
+    \begin{itemize}
+        \item\begin{description}
+            \item[Programming] Python, Numerical Analysis and Application Software (with MATLAB), *Financial Engineering, Applied Statistics II: Time Series (with Python), *\hypertarget{FinTS}{Financial Time Series} (with R), *AI
+        \end{description}
+        \item\begin{description}
+            \item[Math And Stats] Probability Theory and Mathematical Statistics, Calculus I \& II, Discrete Mathematics, Linear Algebra, ODE, *PDE, *Mathematics Finance
+        \end{description}
+        \item\begin{description}
+            \item[Economics And Finance] Econometrics, Financial Risk Management, Securities Investment, *Options Investing Theories And Practices, Corporate Finance, Microeconomics, Macroeconomics, Accounting, International Finance, International Trade
+        \end{description} 
+    \end{itemize} 
+\end{itemize}   
+
 \begin{quote}
     \itshape
-    * is added before courses in progress.
+    * is added before courses in progress.\\
+    ** is added before grad-level courses.
 \end{quote}
 
 \section{Research Experiences And Publications}  %========================== RA ==========================%
@@ -142,38 +154,37 @@
 \subsubsection{Columbia University Stats Department}
 \vspace{3pt}
 \begin{adjustwidth}{10pt}{}
-    Under prof Campbell's supervision, I worked as an RA on the extended topic to his work \textit{"Deep learning for principal-agent mean field
+    Under prof Campbell's supervision, I worked as an RA on the extended topic of his work \textit{"Deep learning for principal-agent mean field
 games."} \cite{SC} and its application in REC markets. Here are the major things I did.
 \end{adjustwidth}
 
 \begin{itemize}
-    \item Built up the FBSDE-MFG model and NN framework with PyTorch to reproduced the results of 1-Period-2-Agent Model in \cite{SC}.
-    \item Added additional period to the previous model and framework: Joint Optimization Model, considering for not just current but also future quotas. 
+    \item Built up the FBSDE-MFG model and NN framework with PyTorch to reproduce the results of 1-Period-2-Agent Model in \cite{SC}.
+    \item Added additional period to the previous model and framework: Joint Optimization Model, considering current and future quotas. 
     \item Proposed 3 numeric tricks to improve the model stability in seek of desired convergence: \textit{clamp}, \textit{sigmoid approximation}, and \textit{logit transformation}.
-    \item Experimented with different combos of NN model settings (e.g. optimizer, scheduler, layers etc.), parameters (e.g. lr), numeric tricks, and loss functions.
+    \item Experimented with different combos of NN model settings (e.g. optimizer, scheduler, layers, etc.), parameters (e.g. lr), numeric tricks, and loss functions.
     \item Proposed a benchmark model - Separate Optimization Model - by running the 1P2A model twice, which gives a better view of differences made by long/short-sighted perspectives. 
     \item Wrapped up codes into well-defined packages, published to \MFG\ together with README instructions. 
-    \item Wrote a Report-Overview for big pictures and Report-Stepwise for detailed math and algorithm illustrations. 
+    \item Wrote a \textit{Report-Overview} for big pictures and \textit{Report-Stepwise} for detailed math and algorithm illustrations. 
 \end{itemize}
 
-
-
+\newpage
 \subsection{Low-carbon Transition of China's Power System \normalfont \hfill RA \hfill 2023} 
 \subsubsection{Tsinghua-CTG Joint Center for Climate Governance and Low-carbon Transformation} 
 \vspace{3pt}
 \begin{adjustwidth}{10pt}{}
-    Under supervision of main researcher Yang Qu, I assisted \TCJCGLT\ in completion of the research report series "Low-carbon Transition of China's Power System". My major works are as follows.
+    Under the supervision of main researcher Yang Qu, I assisted \TCJCGLT\ in composing the research report series "Low-carbon Transition of China's Power System". My major works are as follows.
 \end{adjustwidth}
 
 \begin{itemize}
-    \item Focused on 2 sections as major researcher and author of the report series.
+    \item Focused on 2 sections as a major researcher and author of the report series.
     \begin{itemize}
         \item Construction of the national carbon market in China: key problems in market mechanism design and policy recommendations.
         \item Offshore wind industry in low-carbon transition: bottleneck and future.
     \end{itemize}
     \item Visualization - made all figures and tables for the report series. 
     \item Collected references for other sections of the report series. 
-    \item Assisted completing and proof-reading the draft versions.
+    \item Assisted in completing and proofreading the draft versions.
 \end{itemize}
 
 \hypertarget{project-exp}{
@@ -187,10 +198,10 @@ games."} \cite{SC} and its application in REC markets. Here are the major things
 \vspace{3pt}
 \begin{itemize}
     \item\begin{description}
-        \item[Team Collaboration] Collaborated with a team under supervision and mentoring of Carlos (Arocha Association) to carry out an innovative model for data-driving insurance pricing strategy.
+        \item[Team Collaboration] Collaborated with a team under the supervision and mentoring of Carlos (Arocha Association) to carry out an innovative model for a data-driving insurance pricing strategy.
     \end{description}
     \item\begin{description}
-        \item[Risk Modeling In Python] Innovatively leveraged unsupervised learning (K-Means, PCA, etc.) to identify risk levels based on policy data. Developed exposure rating methods to estimate risk premiums and prices for policies in each risk level.
+        \item[Risk Modeling In Python] Innovatively leveraged unsupervised learning (K-Means, PCA, etc.) to identify risk levels based on policy data. Developed exposure rating methods to estimate risk premiums and policy prices in each risk level.
     \end{description}
     \item\begin{description}
         \item[Professional Reporting And Presenting] Delivered professional Statement of Work and Reports. Presented findings and consulting advice to clients.
@@ -201,7 +212,7 @@ games."} \cite{SC} and its application in REC markets. Here are the major things
 \subsubsection{Self-Motivated Personal Project}
 \begin{itemize}
     \item\begin{description}
-        \item[Innovation] Replaced traditional single-belt with double-bound, which leads to less fluctuations and greater stability.
+        \item[Innovation] Replaced traditional single-belt with double-bound, which leads to fewer fluctuations and greater stability.
     \end{description}
     \item\begin{description}
         \item[Genetic Algorithm] Learned GA from scratch and applied it to parameter optimization (i.e. coefficient, bandwidth), and customized fitness functions(e.g. Sharpe-based to Return-based).
@@ -226,7 +237,7 @@ games."} \cite{SC} and its application in REC markets. Here are the major things
 \subsubsection{Remote}
 \begin{itemize}
     \item\begin{description}
-        \item[Market Psycology And Behavioral Investing] Focused on behavioral finance, refine ideas from papers and researches and transform ideas into alphas. Examined and submitted alphas through internal system(Trex Pysim).
+        \item[Market Psychology And Behavioral Investing] Focused on behavioral finance, refining ideas from papers and research and transforming ideas into alphas. Examined and submitted alphas through the internal system(Trex Pysim).
     \end{description}
 \end{itemize}
 
@@ -235,7 +246,7 @@ games."} \cite{SC} and its application in REC markets. Here are the major things
 \begin{itemize}%[left=5pt]
     \item \begin{description}
         \item[Optimization of "Whitney George" Strategy] 
-        Optimized the strategy parameters w.r.t. A-stock market, leading to an excess of 29\% to the annual return of SSE 300 Index (2018-Q1 to 2023-Q4). The strategy is expected to be used for real trading from 2024-Q4 on.
+        Optimized the strategy parameters w.r.t. A-stock market, leading to an excess of 29\% to the annual return of the SSE 300 Index (2018-Q1 to 2023-Q4). The strategy is expected to be used for real trading from 2024-Q4 on.
     \end{description}
     \item \begin{description}
         \item[Construction And Maintenance of Trading System] 
@@ -247,10 +258,11 @@ games."} \cite{SC} and its application in REC markets. Here are the major things
 \section{Extracurricular Activities}
 }
 \subsection{Presendent of NFEA External Relations Department \normalfont \hfill 2023-now}
-As a self-managed non-profit association, we aim to broaden members' career opportunities and potentials through reaching out to companies and recruiters. I am responsible for leading the core members and am in charge of the reach-out affairs. 
+As a self-managed non-profit association, we aim to broaden members' career opportunities and potential through reaching out to companies and recruiters. I am responsible for leading the core members and am in charge of the reach-out affairs. 
 \subsection{Core Member of  Columbia College VESC \normalfont \hfill 2024}
-I took the lead in organizing "Eastern Egg Hunting" and assisted organizing other 3 monthly activities, which helped to bring international students together and cultivate a sense of belonging. 
+I took the lead in organizing "Eastern Egg Hunting" and assisted in organizing other 3 monthly activities, which helped to bring international students together and cultivate a sense of belonging. 
 
+\newpage
 \section{Skills}
 
 \subsection{Programming}
@@ -261,11 +273,11 @@ I took the lead in organizing "Eastern Egg Hunting" and assisted organizing othe
     \end{description}
     \item\begin{description}
         \item[R | LM, GLM, tree models.] 
-        Accomplished course assignments in \hyperlink{PM}{PM} and \hyperlink{FinTS}{FinTS}; also achieved A in PM (rank 1 in midterm exam).
+        Accomplished course assignments in \hyperlink{PM}{PM} and \hyperlink{FinTS}{FinTS}; also achieved A in PM (rank 1 in the midterm exam).
     \end{description}
     \item \begin{description}
         \item[Other less proficient languages | C++, MATLAB] 
-        Earned CCF CSP-S 2nd Class Certificate in high school; accomplished course work and exams with MATLAB.
+        Earned CCF CSP-S 2nd Class Certificate in high school; accomplished coursework and exams with MATLAB.
     \end{description}
 \end{itemize}
 
@@ -273,11 +285,11 @@ I took the lead in organizing "Eastern Egg Hunting" and assisted organizing othe
 \begin{itemize}
     \item\begin{description}
         \item[\LaTeX | Academic Report Writing] 
-        I used Overleaf for purposes ranging from research reports to CV, which improves my \LaTeX skills.
+        I used Overleaf for purposes ranging from research reports to CV, which improved my \LaTeX skills.
     \end{description}
     \item\begin{description}
         \item[MicroSoft | Professional Report Writing] 
-        My real-world experiences from internships and \hyperlink{integrated}{mentorship of Carlos} equipped me with professional typsetting skills, like meeting agendas, minutes as well as statements of work.
+        My real-world experiences from internships and \hyperlink{integrated}{mentorship of Carlos} equipped me with professional typesetting skills, like meeting agendas, minutes as well as Statement of Work.
     \end{description}
 \end{itemize}
 
@@ -287,7 +299,7 @@ I took the lead in organizing "Eastern Egg Hunting" and assisted organizing othe
         \item[Proficiency Tests | TOEFL - 111/120 | GRE 333/340]  
     \end{description}
     \item \begin{description}
-        \item[Oversea Experiences] Lived in NY for 8 months and made bunch of native friends who help me getting rather good at daily communication.
+        \item[Overseas Experiences] Lived in NY for 8 months and made a bunch of native friends who helped me get rather good at daily communication.
     \end{description}
 \end{itemize}
 
